# movie-rename

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  movie-rename.1  movie_rename.1
src/: args.rs  functions.rs  main.rs  structs.rs
