[package]
name = "movie-rename"
version = "1.2.4"
edition = "2021"
authors = ["Sayantan Santra <sayantan[dot]santra689[at]gmail[dot]com"]
license = "GPL-3.0"
description = "A simple tool to rename movies, written in Rust."
homepage = "https://github.com/SinTan1729/movie-rename"
documentation = "https://docs.rs/movie-rename"
repository = "https://github.com/SinTan1729/movie-rename"
readme = "README.md"
keywords = ["rename", "movie", "media", "tmdb"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrent-name-parser = "0.11.0"
tmdb = "3.0.0"
inquire = "0.5.3"
load_file = "1.0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"