[package]
name = "movie-rename"
version = "2.1.5"
edition = "2021"
authors = ["Sayantan Santra <sayantan[dot]santra689[at]gmail[dot]com"]
license = "GPL-3.0"
description = "A simple tool to rename movies, written in Rust."
homepage = "https://github.com/SinTan1729/movie-rename"
documentation = "https://docs.rs/movie-rename"
repository = "https://github.com/SinTan1729/movie-rename"
readme = "README.md"
keywords = ["rename", "movie", "media", "tmdb"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrent-name-parser = "0.12.1"
tmdb-api = "0.5.0"
inquire = "0.6.2"
load_file = "1.0.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
